Paranoia at its best

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Device configuration for the HTC Vivo-w (aka Incredible 2)
+Device configuration for the Lexikon (AKA HTC Merge)
 
 Copyright (C) 2011 The CyanogenMod Project
 
